# Learning-Notes

./: .gitattributes  .gitignore  .gitmodules  Java-learning.md  LICENSE  README.md  five-css.css  float-test.css  git-learning.md  html笔记  redis-notes.md  showCodeLine.sh  test.html  train.html
00-develop-notes/: Obsidian Tutorial.md  Todo-List.md
00-develop-notes/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  graph.json  hotkeys.json  templates.json  workspace.json
00-develop-notes/.trash/: Drawing 2024-06-16 11.06.19.excalidraw.md  Untitled.canvas
00-develop-notes/03-Middleware/: Redis.md
03-tools/: idea-notes.md
04-misc/: ANSI-escape-sequences.md  boot.md  character-encode.md  knowledge.md  server-software.md
07-git/: git-learning.md
07-git-learning/: git-learning.md
09-linux/: Linux在PC上的安装.md  linux-notes.md
09-linux-learning/: Linux基础详细.xmind
11-mysql/: mysql-notes.md
11-mysql-learning/: mysql-advance-note.md
12-subversion-learning/: subversion-learning.md
13-java/: java基础知识总结(经典).doc
13-java/JavaSE/: stream.md  (+1 more)
14-spring/: spring-notes.md
15-springMVC/: springmvc-notes.md
20-maven-learning/: maven-notes.md
21-mybatis-plus/: mybatis-plus-notes.md
23-crowdfunding/: keng.md
27-juc/: juc-note.md  principles-of-concurrent-programming.md
28-jvm/: Class实例的位置.drawio  GC.drawio  byte-code.csv  byte-code.xlsx  class-classloader-object-类方法区模板的关系.drawio  jvm-note.md  类的生命周期.drawio
30-design-pattern/: Chain-of-Responsibility-Pattern.md
31-activemq/: activemq-note.md
34-performance/: performance-note.md
35-tomcat/: tomcat-note.md
40-langchain/langchain1.2_tutorial/: README.md  main.py  pyproject.toml
40-langchain/langchain1.2_tutorial/chapter01_summary/: test.py
40-langchain/langchain1.2_tutorial/chapter02_model/: 01_model_init_online.ipynb  02-model-init-params.ipynb  03-model-invoke.ipynb  04-model-stream-batch.ipynb  05-ainvoke.py  06-astream.py  07-abatch.py  08-init-model-param-kwargs-config.ipynb
40-langchain/langchain1.2_tutorial/chapter03_langsmith/: 01-langsmith-test.ipynb
40-langchain/langchain1.2_tutorial/chapter04_messages_prompt/: 01-message-usage.ipynb  02-content-block.ipynb  03-prompt-template.ipynb
40-langchain/langchain1.2_tutorial/python_tutorial/: 01-sync-and-concurrency-basics.ipynb  02-threads-processes-and-gil.ipynb  03-asyncio-fundamentals.ipynb  04-anyio-and-trio.ipynb
40-langchain/langchain1.2_tutorial/python_tutorial/examples/: 01_sync_and_threads.py  02_process_pool.py  03_asyncio_tasks.py  04_anyio_backends.py  05_trio_nursery.py  06_thread_synchronization.py  07_async_with_taskgroup.py
SpringMVC-learning/: springmvc-notes.md
configuration-files/: spring-web.xml
git-learning/: git-learning.html  git-learning.md
html-learning/: five-css.css  git-usage  html-label-and-description  html笔记  taobao.css
java-learning/: java-learning.md  java-notes.md  jdbc-notes.md
linux-learning/: Linux 基础 from started to delete library.pptx  Linux从入门到删库跑路.pptx  Linux基础.md  Linux基础.xmind  Linux基础讲授.xmind  Linux基础详细.md  Linux基础详细.xmind  linux-notes.md
maven-learning/: maven-notes.md
misc/: idea.md
mybatis-learning/: mybatis-notes.md
mybatis-plus-learning/: mybatis-plus-notes.md  数据库脚本.sql
mysql-learning/: backup.sql  index.xlsx  mysql-advance-note.md  mysql-learning.md  mysql-notes.md  练习1.sql
redis-learning/: redis-notes.md
spring-learning/: spring-notes.md
springMVC-learning/: springmvc-notes.md
sql-learning/: sql-learning.html  sql-learning.md
ssm-merge/: ssm-code.md
vim-learning/: vim-learning.html  vim-learning.md
vue-learning/: vue-learning.md
(+1959 files in other folders)
